--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,16 @@
-#H2
+spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-
-#DataSource
-spring.datasource.url=jdbc:h2:./src/main/resources/Student
-spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.show-sql=true
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.show-sql=true
-spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:h2:./src/main/resources/users
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-
-#
 
 logging.level.org.springframework.security = DEBUG
 
-spring.security.user.name = internfactory@gmail.com
-spring.security.user.password= Interfactory@123
-spring.security.user.roles = ADMIN
+spring.security.user.name=interfactory@gmail.com
+spring.security.user.password=Interfactory@123
+spring.security.user.roles=ADMIN
