Added JWT tokens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,7 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-
 logging.level.org.springframework.security = DEBUG
-
-spring.security.user.name=interfactory@gmail.com
-spring.security.user.password=Interfactory@123
-spring.security.user.roles=ADMIN
+#spring.security.user.name=interfactory@gmail.com
+#spring.security.user.password=Interfactory@123
+#spring.security.user.roles=ADMIN
