--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.url=jdbc:h2:./src/main/resources/users
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
 logging.level.org.springframework.security = DEBUG
-#spring.security.user.name=interfactory@gmail.com
+#spring.security.user.name=teaminterfactory@gmail.com
 #spring.security.user.password=Interfactory@123
 #spring.security.user.roles=ADMIN
+server.port = 8080
