--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ logging.level.org.springframework.security = DEBUG
 #spring.security.user.name=teaminterfactory@gmail.com
 #spring.security.user.password=Interfactory@123
 #spring.security.user.roles=ADMIN
+spring.h2.console.settings.web-allow-others=true
 server.port = 8080
