--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,12 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 logging.level.org.springframework.security = DEBUG
-#spring.security.user.name=teaminterfactory@gmail.com
-#spring.security.user.password=Interfactory@123
-#spring.security.user.roles=ADMIN
 spring.h2.console.settings.web-allow-others=true
 server.port = 8080
 
 #File Related Configurations
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.file-size-threshold=1KB
 spring.servlet.multipart.max-request-size=10MB
-project.image = ./src/main/resources/static/
+project.image = ./target/classes/static/
