Added Profile Apis of Host Side or company side

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.file-size-threshold=1KB
 spring.servlet.multipart.max-request-size=10MB
+#project.image = ./src/main/resources/static/
 project.image = ./target/classes/static/
